syntax = "proto3";
package agoric.vbank;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos/bank/v1beta1/bank.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/Agoric/agoric-sdk/golang/cosmos/x/vbank/types";

// Msg defines the vbank Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // SetDenomMetadata defines a governance operation for setting the metadata for a denom.
  // The authority is defined in the keeper.
  rpc SetDenomMetadata(MsgSetDenomMetadata) returns (MsgSetDenomMetadataResponse);
}

// MsgSetDenomMetadata represents a message to set the metadata for a denom.
message MsgSetDenomMetadata {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "vbank/SetDenomMetadata";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // metadata is the bank denom metadata to set.
  cosmos.bank.v1beta1.Metadata metadata = 2 [(gogoproto.nullable) = false];
}

// MsgSetDenomMetadataResponse is the response type for the Msg/SetDenomMetadata RPC method.
message MsgSetDenomMetadataResponse {}
